--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+spring.data.web.pageable.default-page-size=4
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=qwerty
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=validate
+server.servlet.session.persistent=false
+#spring.jpa.properties.hibernate.generate_statistics=true
+#logging.level.org.hibernate.stat=debug
+## Show all queries
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.type=trace
+#logging.level.sql=trace
+## logging for web requests
+#spring.devtools.livereload.enabled=false
+#logging.level.web=DEBUG
+#spring.http.log-request-details=false
+#spring.freemarker.template-loader-path: classpath:/templates
+#spring.freemarker.suffix: .ftlh
+
 
